# martian_swarm_quantum

./: .gitignore  CONTRIBUTORS.md  QUICKSTART.md  README.md  fast_simulation.py  martian_swarm_quantum_sim.py  run_3day_simulated.py  run_4day_experiments.py  run_continuous_3days.py  run_experiments.py  run_fast_sim.py  run_optimized_sim.py  visualize_results.py
.github/workflows/: ci.yml
docker/: Dockerfile.gazebo  Dockerfile.quantum  Dockerfile.ros2  docker-compose.yml
docs/: M2_MAC_INSTALL.md  PHASE_GUIDES.md  QUICK_START.md  SETUP_GUIDE.md
gazebo_worlds/worlds/: martian_lava_tube.world
matlab_scripts/: dust_storm_controller.m
ros2_ws/src/chaos_monkey/: package.xml  setup.py
ros2_ws/src/chaos_monkey/chaos_monkey/: chaos_node.py
ros2_ws/src/quantum_map_merge/: package.xml  setup.py
ros2_ws/src/quantum_map_merge/quantum_map_merge/: quantum_node.py
ros2_ws/src/snn_controller/: package.xml  setup.py
ros2_ws/src/snn_controller/snn_controller/: snn_node.py
ros2_ws/src/swarm_control/: package.xml  setup.py
ros2_ws/src/swarm_control/launch/: mars_swarm.launch.py
ros2_ws/src/swarm_control/swarm_control/: swarm_node.py
scripts/: bug_fixer.py  install_all.sh  launch_simulation.sh  research_rabbit.py  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_phase4.sh  run_phase5.sh  setup_complete.sh  setup_environment.sh
tests/: test_basic.py
